# grafana-dashboards

./: .copier-answers.yml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  duties.py  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml  release.yml
alloy/: config.alloy.j2  env.example
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
docs/.overrides/partials/: comments.html
docs/reference/: api.md
docs/superpowers/plans/: 2026-05-28-grafana-host-dashboard-impl.md
docs/superpowers/specs/: 2026-05-28-grafana-host-dashboard-design.md
just/: alloy.just  cluster.just  dash.just  dev.just
scripts/: gen_credits.py  render_to_chart.py
src/grafana_dashboards/: __init__.py  __main__.py  rows.py  variables.py
src/grafana_dashboards/_internal/: cli.py  debug.py  envelope.py  validate.py
src/grafana_dashboards/dashboards/: __init__.py  host_omarchy.py  service_health.py
src/grafana_dashboards/panels/: __init__.py  _common.py  logs.py  stat.py  tables.py  timeseries.py
tests/: __init__.py  test_api.py  test_cli.py  test_dashboards.py  test_panels_common.py  test_panels_logs.py  test_panels_stat.py  test_panels_tables.py  test_panels_timeseries.py  test_render.py  test_render_to_chart.py  test_rows.py  test_variables.py
