[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "kettle-grafana-dashboards"
description = "Reusable Grafana v2 (Scenes) dashboards as code. Single-source-of-truth dashboard JSON generated via the official grafana-foundation-sdk."
authors = [{name = "KettleOfKetchup", email = "kettleofketchup@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    # Grafana ships v2beta1 builders only on the SDK main branch as of
    # the GA April 2026 cut; PyPI wheels (date-epoch versions) lag.
    # Pin a commit until upstream's PyPI release tracks v2 cleanly.
    "grafana-foundation-sdk @ git+https://github.com/grafana/grafana-foundation-sdk.git@a8c311b58#subdirectory=python",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://kettleofketchup.github.io/grafana-dashboards"
Documentation = "https://kettleofketchup.github.io/grafana-dashboards"
Changelog = "https://kettleofketchup.github.io/grafana-dashboards/changelog"
Repository = "https://github.com/kettleofketchup/grafana-dashboards"
Issues = "https://github.com/kettleofketchup/grafana-dashboards/issues"
Discussions = "https://github.com/kettleofketchup/grafana-dashboards/discussions"
Gitter = "https://gitter.im/grafana-dashboards/community"
Funding = "https://github.com/sponsors/kettleofketchup"

[project.scripts]
kgd = "grafana_dashboards._internal.cli:main"
kettle-grafana-dashboards = "grafana_dashboards._internal.cli:main"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "zensical.toml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    {path = "share/**/*", relative-to = "."},
]

[dependency-groups]
maintain = [
    "git-changelog>=2.5",
    "twine>=5.1",
    "yore>=0.3.3",
]
ci = [
    "duty>=1.6",
    "griffe>=2.0",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "ruff>=0.4",
    "ty>=0.0.14",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
]
 docs = [
    "ghp-import>=2.1",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocstrings[python]>=0.29",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
    "zensical>=0.0.21",
]

[tool.uv]
default-groups = ["maintain", "ci", "docs"]
